Исправлены тесты OrderClient: параметризация, проверка цвета, отмена заказов