@@ -1,56 +1,66 @@
 package ru.yandex.praktikum.sprint7.tests;
 
 import io.qameta.allure.Description;
-import io.qameta.allure.Step;
-import io.qameta.allure.junit4.DisplayName;
-import org.junit.Before;
+import io.restassured.response.Response;
+import org.junit.After;
 import org.junit.Test;
-import ru.yandex.praktikum.sprint7.Order;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
 import ru.yandex.praktikum.sprint7.OrderClient;
+import ru.yandex.praktikum.sprint7.Order;
 
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 
 import static org.hamcrest.Matchers.notNullValue;
 
+@RunWith(Parameterized.class)
 public class CreateOrderTest {
 
-    private OrderClient orderClient;
+    private OrderClient orderClient = new OrderClient();
+    private Integer track;
 
-    @Before
-    public void setUp() {
-        orderClient = new OrderClient();
+    @Parameterized.Parameter
+    public String[] colors;
+
+    @Parameterized.Parameters(name = "Цвета заказа: {0}")
+    public static Collection<Object[]> getColors() {
+        return Arrays.asList(new Object[][]{
+                {new String[]{"BLACK"}},
+                {new String[]{"GREY"}},
+                {new String[]{"BLACK", "GREY"}},
+                {null}  // без цвета
+        });
+    }
+
+    @After
+    public void tearDown() {
+        if (track != null) {
+            try {
+                orderClient.cancelOrder(track)
+                        .then()
+                        .statusCode(200);
+            } catch (AssertionError ignored) {
+                // Игнорируем 404 если заказ уже отменен
+            }
+        }
     }
 
     @Test
-    @DisplayName("Создание заказа с одним цветом")
-    @Description("Создаем заказ с одним цветом и проверяем наличие track")
-    public void createOrderWithOneColor() {
-        createOrderStep(Arrays.asList("BLACK"));
-    }
+    @Description("Создание заказа с цветами")
+    public void createOrderWithColors() {
+        Order order = new Order();
+        if (colors != null) {
+            order.setColor(List.of(colors));
+        }
 
-    @Test
-    @DisplayName("Создание заказа с двумя цветами")
-    @Description("Создаем заказ с двумя цветами и проверяем наличие track")
-    public void createOrderWithBothColors() {
-        createOrderStep(Arrays.asList("BLACK", "GREY"));
-    }
+        Response response = orderClient.createOrder(order);
 
-    @Test
-    @DisplayName("Создание заказа без указания цвета")
-    @Description("Создаем заказ без указания цвета и проверяем наличие track")
-    public void createOrderWithoutColor() {
-        createOrderStep(null);
-    }
-
-    @Step("Создание заказа с цветами: {colors}")
-    private void createOrderStep(List<String> colors) {
-        Order order = new Order("Naruto", "Uzumaki", "Konoha, 142", 1,
-                "+7 800 355 35 35", 5, "2025-10-10", "Saske, come back", colors);
-
-        orderClient.createOrder(order)
-                .then()
+        response.then()
                 .statusCode(201)
                 .body("track", notNullValue());
+
+        track = response.path("track");
     }
 }
